# tileSweatshop

./: .gitignore  Context.h  Makefile  Makefile.am  PaintingContext.cc  PaintingContext.h  PaletteContext.cc  PaletteContext.h  README.md  Screen.h  Tile.cc  Tile.h  TilesetScreen.cc  TilesetScreen.h  Tool.cc  Tool.h  Tools.h  configure  configure.ac  main.cc  tileSweatshop  tileSweatshop.desktop  tools.cc  tools.h
assets/: builder.ui
src/: Context.h  HotkeyManager.cc  HotkeyManager.h  Makefile  Makefile.am  PaintingContext.h  Tile.cc  Tile.h  Tool.cc  Tools.cc  createTileset  tileSweatshop.cc  tilesetCreate.cc  tilesetExport.cc  utils.cc  utils.h
